2019-07-10 Vlad Glagolev <stealth@sourcemage.org>
	* wm-addons/rofi: new spell, window switcher, application launcher and
	  dmenu replacement

2019-07-08 Eric Sandall <sandalle@sourcemage.org>
	* FUNCTIONS: In disable_pic, check 64-bit for EM64T as well.
	  Sorcery devel (from git), glibc, gcc, or updated smgl-archspecs changed
	  SMGL_COMPAT_ARCH[1] from x86_64 to em64t.

2019-07-05 Pavel Vinogradov <public@sourcemage.org>
	* gu.gpg: added new key, 8C8189F1988C2166, Daniel Kiper <dkiper@net-space.pl>

2019-06-30 Pavel Vinogradov <public@sourcemage.org>
	* kernel.gpg: added subkey 38DBBDC86092693E,
	  Greg Kroah-Hartman <gregkh@linuxfoundation.org>

2019-06-26 Pavel Vinogradov <public@sourcemage.org>
	*  python-pupi/python-sqlparse: new spell, a non-validating SQL parser

2019-06-25 Treeve Jelbert <treeve@sourcemage.org>
	* freedesktop.gpg: add emersion <contact@emersion.fr>

2019-06-22 Vlad Glagolev <stealth@sourcemage.org>
	* perl-cpan/time-out: new spell, easily timeout long running operations
	* perl-cpan/perlio-via-timeout: new spell, PerlIO layer that adds read
	  & write timeout to a handle
	* perl-cpan/io-socket-timeout: new spell, IO::Socket with read/write
	  timeout
	* perl-cpan/perl-redis: new spell, Perl binding for Redis database
	* perl-cpan/cache-memcached-fast: new spell, Perl client for Memcached
	* perl-cpan/cdb_file: new spell, Perl extension for access to cdb
	  databases
	* perl-cpan/net-statsd: new spell, Perl client for Etsy's statsd daemon

2019-06-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
	* graphics-libs/libmypaint: new spell, mypaint's brush library
	* graphics/mypaint-brushes: new spell, brushes for mypaint

2019-06-20 Vlad Glagolev <stealth@sourcemage.org>
	* perl-cpan/class-method-modifiers: new spell, provides Moose-like
	  method modifiers
	* perl-cpan/sub-quote: new spell, efficient generation of subroutines
	  via string eval
	* perl-cpan/moo: new spell, Minimalist Object Orientation (with Moose
	  compatibility)
