@@ -1,0 +1,1 @@
+make prefix="${INSTALL_ROOT}/usr"
