@@ -1,0 +1,19 @@
+           SPELL=quickjs
+         VERSION=2019-07-09
+          SOURCE=${SPELL}-${VERSION}.tar.xz
+   SOURCE_URL[0]=https://bellard.org/${SPELL}/${SOURCE}
+     SOURCE_HASH=sha512:db2498659ae1c22e5c0a24e0f2d582db6003e18a182a80f407b1ee8779edddff473572bcfecd1584281c65af8c428b2794d1c7aae90ec87e4338f7bbd9a61b7c
+SOURCE_DIRECTORY="${BUILD_DIRECTORY}/${SPELL}-${VERSION}"
+        DOC_DIRS="examples ${DOC_DIRS}"
+            DOCS="TODO ${DOCS}"
+        WEB_SITE=https://bellard.org/quickjs/
+      LICENSE[0]=MIT
+         ENTERED=20190711
+           SHORT="QuickJS Javascript Engine"
+cat << EOF
+QuickJS is a small and embeddable Javascript engine. It supports the ES2019
+specification including modules, asynchronous generators and proxies.
+
+It optionally supports mathematical extensions such as big integers (BigInt),
+big floating point numbers (BigFloat) and operator overloading.
+EOF
