@@ -1,0 +1,9 @@
+default_pre_build &&
+cd "${SOURCE_DIRECTORY}" &&
+
+sedit "s:-O2:${CFLAGS}:;s:CFLAGS=-g:CFLAGS=:;/^LDFLAGS=-g/d;/^CONFIG_LTO=/d;/^CONFIG_M32=/d" Makefile &&
+
+if spell_ok gcc && is_version_less $(installed_version gcc) 4.9; then
+  cp -v "${SPELL_DIRECTORY}/stdatomic.h" . &&
+  sedit "s:<stdatomic\.h>:\"stdatomic\.h\":" quickjs.c
+fi
