@@ -1,0 +1,3 @@
+2019-07-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS, {PRE_,}BUILD, INSTALL, stdatomic.h: created spell, version
+	  2019-07-11
