@@ -1,3 +1,6 @@
+2019-07-11 Vlad Glagolev <stealth@sourcemage.org>
+	* devel/quickjs: new spell, QuickJS Javascript Engine
+
 2019-07-10 Vlad Glagolev <stealth@sourcemage.org>
 	* wm-addons/rofi: new spell, window switcher, application launcher and
 	  dmenu replacement
